tools/tests/ui/fail/l1022.cnf
// Test file for error code: L1022
// Expected error: Invalid IMAGE-JPG character in indentation -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-invalid".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
